created db connection added a 404 page made public the static dir configured helmet to allow giphy images

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,19 +1,7 @@
-<head>
-  <title>KTControl</title>
-  <link rel="shortcut icon" href="../static/favicon.png" type="image/x-icon" />
-  <style>
-    body {
-      box-sizing: border-box;
-      margin: 0px;
-    }
+<%- include('share'); %>
 
-    .placeholder {
-      display: flex;
-      width: 50vw;
-      justify-content: center;
-      margin: 2vh 25vw;
-    }
-  </style>
+<head>
+  <link rel="stylesheet" href="/css/index.css" />
 </head>
 
 <div class="placeholder">
