added page to list employees & create new emploee added a GET route to create emoloyee added

--- a/views/share.ejs
+++ b/views/share.ejs
@@ -1,10 +1,10 @@
 <head>
-  <title>KTControl</title>
-  <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
-  <style>
-    body {
-      box-sizing: border-box;
-      margin: 0px;
-    }
-  </style>
+	<title>KTControl</title>
+	<link rel="shortcut icon" href="/favicon.png" type="image/x-icon" />
+	<style>
+		body {
+			box-sizing: border-box;
+			margin: 0px;
+		}
+	</style>
 </head>
