--- a/public/css/employee.css
+++ b/public/css/employee.css
@@ -18,14 +18,13 @@
     gap: 20px;
     align-items: center;
     flex-wrap: wrap;
-    padding: 0 auto;
 }
 
 .employee-details{
     justify-content: center;
     align-items: center;
     height: 200px;
-    width: 300px;
+    flex-basis: calc(25% - 55px);
     border-radius: 20px;
     padding: 20px;
     background-color: blanchedalmond;
@@ -116,4 +115,84 @@ color: var(--brown);
 .submit-button:hover{
     cursor: pointer;
     box-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+}
+
+.extended-employee-details{
+    margin: 10px auto;
+    padding: 10px 30px;
+    font-size: 2rem;
+    height: 600px;
+    width: 600px;
+}
+
+.extended-employee-details:hover{
+    cursor: default;
+}
+
+.employee-name{
+    font-size: 5rem;
+}
+
+.extended-employee-details-buttons{
+    display: inline-flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 20px;
+    align-items: end;
+}
+
+.extended-employee-details-buttons button{
+    height: 50px;
+    background-color: var(--brown);
+    color: white;
+    border: 2px solid rgba(0,0,0,0.1);
+    border-radius: 10px;
+    font-size: 1.15rem;
+    width: 200px;
+}
+
+.extended-employee-details-buttons button:hover{
+    cursor: pointer;
+    box-shadow: 2px 2px 2px rgba(0,0,0,0.5);
+}
+
+#delete-employee-modal{
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    height: 100vh;
+    display: none;
+    justify-content: center;
+   padding-top: 20vh;
+    z-index: 5;
+    background: rgba(0, 0, 0, 0.5);
+}
+
+.delete-employee-modal-dialogue{
+    background-color: blanchedalmond;
+    box-shadow: 5px 5px 5px rgb(0,0,0,0.5);
+    border-radius: 15px;
+    height: 120px;
+    padding: 5px 20px;
+    font-size: 1.5rem;
+}
+
+.delete-employee-modal-buttons{
+    display: flex;
+    width: 100%;
+    gap: 5px;
+    justify-content: end;
+}
+
+.delete-employee-modal-button{
+    height: 30px;
+    background-color: var(--brown);
+    color: white;
+    border: 2px solid rgba(0,0,0,0.1);
+    border-radius: 5px;
+    font-size: 1.35rem;
+}
+
+.delete-employee-modal-button:hover{
+    cursor: pointer;
 }
