--- a/views/Employee/new-employee.ejs
+++ b/views/Employee/new-employee.ejs
@@ -24,6 +24,7 @@
 		</div>
 		<div class="entry">
 			<input type="text" id="Username" placeholder="Username" name="username" />
+			<small>username can only have letters,numbers, "_" , and "."</small>
 		</div>
 		<div class="entry">
 			<input type="password" id="Password" placeholder="Password" name="password" />
