you can now update Employee Data

--- a/views/Employee/employee.ejs
+++ b/views/Employee/employee.ejs
@@ -14,7 +14,7 @@
 		%>
 	</p>
 	<div class="extended-employee-details-buttons">
-		<button>Edit</button>
+		<a href="<%=`/employee/update-employee/${_id.toString()}`%>" style="text-decoration: none; color: white"><button>Edit</button></a>
 		<button id="change-employee-password-button">Change Password</button>
 		<button id="delete-employee-button">Delete</button>
 	</div>
