--- a/views/not-found.ejs
+++ b/views/not-found.ejs
@@ -1,13 +1,13 @@
-<%- include('share'); %>
+<%- include('./shared/head'); %>
 <head>
-  <link rel="stylesheet" href="/css/not-found.css" />
+	<link rel="stylesheet" href="/css/not-found.css" />
 </head>
 <div class="not-found">
-  <div>
-    <h1>I think you're lost 😬</h1>
-  </div>
-  <img
-    src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExMDlsaDJoY3NlZnlnbW43eTA5ZW1qcDVlMml3YnZlNmY5MWFzcTJwYyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/j6aoUHK5YiJEc/giphy.gif"
-    alt="u lost ?"
-  />
+	<div>
+		<h1>I think you're lost 😬</h1>
+	</div>
+	<img
+		src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExMDlsaDJoY3NlZnlnbW43eTA5ZW1qcDVlMml3YnZlNmY5MWFzcTJwYyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/j6aoUHK5YiJEc/giphy.gif"
+		alt="u lost ?"
+	/>
 </div>
