--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,49 +1,19 @@
 @import url(./shared.css);
 
-main{
-  width: 100%;
-  height: 100%;
-  padding-top: 50px;
-  background: var(--background-gradient)
+main {
+    width: 100%;
+    height: 100%;
+    background: var(--background-gradient)
 }
 
-.logo{
-  background: var(--solid-gradient);
-  font-size: 13rem;
-  text-align: center;
-  color: transparent;
-  -webkit-background-clip: text;
-  -moz-background-clip: text;
-  background-clip: text;
-  margin: 0px!important;
-  font-family: 'Space Grotesk', sans-serif;
-}
-
-.action-list{
-  display: flex;
-  margin: 50px;
-  justify-content: center;
-  gap: 30px;
-  flex-wrap: wrap;
-}
-
-.action{
-  background: linear-gradient(120deg, rgba(101,114,249,1) 50%, rgba(80,247,173,1) 100%);
-  font-size: 3rem;
-  height: 200px;
-  width: 300px;
-  border-radius: 35px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  font-family: 'Merriweather', serif;
-  color: white;
-  text-decoration: none;
-  flex-shrink: 0;
-}
-
-.action:hover{
-  cursor: pointer;
-  box-shadow: 5px 5px 5px rgba(0,0,0,0.5);
+.logo {
+    padding: 100px 0 50px 0;
+    background: var(--solid-gradient);
+    font-size: 13rem;
+    text-align: center;
+    color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+    margin: 0 !important;
+    font-family: 'Space Grotesk', sans-serif;
 }
