--- a/views/Employee/employee.ejs
+++ b/views/Employee/employee.ejs
@@ -1,52 +1,55 @@
 <%- include('../shared/head'); %>
 <head>
-	<link rel="stylesheet" href="/css/employee.css" />
+    <link rel="stylesheet" href="/css/employee.css"/>
 </head>
 <%- include('../shared/nav', {title: "Employees", link: "/employee"}) %>
-<div class="employee-details extended-employee-details" id="employee" data-id="<%= _id.toString() %>">
-	<p class="employee-detail-title employee-name"><%= name %></p>
-	<p><span class="employee-detail-title">Job Title:</span> <%= title %></p>
-	<p><span class="employee-detail-title">Code:</span> <%= code %></p>
-	<p><span class="employee-detail-title">Username:</span> <%= username %></p>
-	<p><span class="employee-detail-title">Hourly Rate:</span> <%= hourlyRate %></p>
-	<p>
-		<span class="employee-detail-title">Work Hours:</span> <span>from</span> <%= workHours.clockIn %> <span>to</span> <%= workHours.clockOut
-		%>
-	</p>
-	<div class="extended-employee-details-buttons">
-		<a href="<%=`/employee/update-employee/${_id.toString()}`%>" style="text-decoration: none; color: white"><button>Edit</button></a>
-		<button id="change-employee-password-button">Change Password</button>
-		<button id="delete-employee-button">Delete</button>
-	</div>
+<div class="details extended-details" id="employee" data-id="<%= _id.toString() %>">
+    <p class="detail-title employee-name"><%= name %></p>
+    <p><span class="detail-title">Job Title:</span> <%= title %></p>
+    <p><span class="detail-title">Code:</span> <%= code %></p>
+    <p><span class="detail-title">Username:</span> <%= username %></p>
+    <p><span class="detail-title">Hourly Rate:</span> <%= hourlyRate %></p>
+    <p>
+        <span class="detail-title">Work Hours:</span> <span>from</span> <%= workHours.clockIn %>
+        <span>to</span> <%= workHours.clockOut
+        %>
+    </p>
+    <div class="extended-details-buttons">
+        <a href="<%= `/employee/update-employee/${_id.toString()}` %>" class="link-reset">
+            <button>Edit</button>
+        </a>
+        <button id="change-employee-password-button">Change Password</button>
+        <button id="delete-employee-button">Delete</button>
+    </div>
 </div>
-<div id="delete-employee-modal">
-	<div class="employee-modal-dialogue">
-		<p>Are you sure you want to delete <%= name %> ?</p>
-		<div class="employee-modal-buttons">
-			<button class="employee-modal-button" id="confirm-delete-employee-button">Confirm</button>
-			<button class="employee-modal-button" id="cancel-delete-employee-button">Cancel</button>
-		</div>
-	</div>
+<div id="delete-employee-modal" class="modal">
+    <div class="modal-dialogue">
+        <p>Are you sure you want to delete <%= name %> ?</p>
+        <div class="modal-buttons">
+            <button class="modal-button" id="confirm-delete-employee-button">Confirm</button>
+            <button class="modal-button" id="cancel-delete-employee-button">Cancel</button>
+        </div>
+    </div>
 </div>
-<div id="update-employee-password-modal">
-	<form method="POST" action="<%= `/employee/update-password/${_id.toString()}` %>" autocomplete="off">
-		<div class="employee-modal-dialogue">
-			<div class="entry">
-				<input type="password" name="oldPassword" placeholder="Old Password" />
-			</div>
-			<div class="entry">
-				<input type="password" name="newPassword" placeholder="New Password" />
-			</div>
-			<div class="entry">
-				<input type="password" name="repeatedNewPassword" placeholder="Repeat New Password" />
-			</div>
-			<div class="employee-modal-buttons">
-				<input type="submit" class="employee-modal-button" id="confirm-change-employee-password-button" value="Confirm" />
-				<button class="employee-modal-button" id="cancel-change-employee-password-button">Cancel</button>
-			</div>
-		</div>
-	</form>
-	action="<% `/employee/update-password/${_id.toString()}` %>"
+<div id="update-employee-password-modal" class="modal">
+    <form method="POST" action="<%= `/employee/update-password/${_id.toString()}` %>" autocomplete="off">
+        <div class="modal-dialogue">
+            <div class="entry">
+                <input type="password" name="oldPassword" placeholder="Old Password"/>
+            </div>
+            <div class="entry">
+                <input type="password" name="newPassword" placeholder="New Password"/>
+            </div>
+            <div class="entry">
+                <input type="password" name="repeatedNewPassword" placeholder="Repeat New Password"/>
+            </div>
+            <div class="modal-buttons">
+                <input type="submit" class="modal-button" id="confirm-change-employee-password-button"
+                       value="Confirm"/>
+                <button class="modal-button" id="cancel-change-employee-password-button">Cancel</button>
+            </div>
+        </div>
+    </form>
 </div>
 
 <script src="/js/employee.js"></script>
