--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,15 +1,15 @@
 <%- include('./shared/head'); %>
 
 <head>
-	<link rel="stylesheet" href="/css/index.css" />
+    <link rel="stylesheet" href="/css/index.css"/>
 </head>
 
 <main>
-	<h1 class="logo">KTControl</h1>
-	<div class="action-list">
-		<a class="action" href="/employee">Employees</a>
-		<a class="action">Attendance</a>
-		<a class="action">Bonuses & Deductions</a>
-		<a class="action">Incentive</a>
-	</div>
+    <h1 class="logo">KTControl</h1>
+    <div class="action-list">
+        <a class="action" href="/employee">Employees</a>
+        <a class="action">Attendance</a>
+        <a class="action" href="/incentive">Incentive</a>
+        <a class="action">Bonuses & Deductions</a>
+    </div>
 </main>
