--- a/views/shared/head.ejs
+++ b/views/shared/head.ejs
@@ -1,10 +1,5 @@
+<!DOCTYPE html>
 <head>
-	<title>KTControl</title>
-	<link rel="shortcut icon" href="/favicon.png" type="image/x-icon" />
-	<style>
-		body {
-			box-sizing: border-box;
-			margin: 0px;
-		}
-	</style>
+    <title>KTControl</title>
+    <link rel="shortcut icon" href="/favicon.png" type="image/x-icon"/>
 </head>
