--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,9 +1,10 @@
 @import url(./shared.css);
 
 main {
-    width: 100%;
-    height: 100%;
-    background: var(--background-gradient)
+    width: 100vw;
+    height: 100vh;
+    background: var(--background-gradient);
+    overflow: scroll;
 }
 
 .logo {
@@ -16,4 +17,16 @@ main {
     background-clip: text;
     margin: 0 !important;
     font-family: 'Space Grotesk', sans-serif;
+}
+
+@media only screen and (max-width: 1020px) {
+    .logo {
+        font-size: 8rem;
+    }
+}
+
+@media only screen and (max-width: 630px) {
+    .logo {
+        font-size: 4rem;
+    }
 }
