--- a/views/Incentive/items.ejs
+++ b/views/Incentive/items.ejs
@@ -24,6 +24,9 @@
                 </p>
             </div>
         <% }) %>
+        <a href="/incentive/items/create-item" class="add-button link-reset"
+           title="add new incentive item">+
+        </a>
     </div>
 </main>
 
