--- a/public/css/shared.css
+++ b/public/css/shared.css
@@ -257,3 +257,36 @@ body {
     font-weight: 500;
     color: var(--blue-dark)
 }
+
+.radio-container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.5);
+}
+
+.radio-container .radios{
+    display: flex;
+    line-height: 1rem;
+    align-items: center;
+    font-size: 1.2rem;
+}
+
+.radio-container .radios input{
+    margin-left: 20px;
+}
+
+.radio-container .radios input:nth-of-type(1){
+    margin-left: 0;
+}
+
+.radio-container button{
+    width: 25% !important;
+    margin: 0;
+}
+
+.radio-select{
+    display: none;
+}
