fixed the incentive per month mongodb query added functionality for it in the views

--- a/public/css/incentive.css
+++ b/public/css/incentive.css
@@ -48,7 +48,7 @@
     line-height: 1rem;
 }
 
-.incentive-details-month{
+.incentive-details-header{
     display: flex;
     justify-content: center;
     color: white;
