--- a/views/Incentive/details.ejs
+++ b/views/Incentive/details.ejs
@@ -7,37 +7,43 @@
 <%- include('../shared/nav', {title: "Details" , link: "/incentive" }) %>
 <main>
     <div class="form-container">
-        <div>
-            <div class="entry radio-select" id="month-filter">
-                <select id="month">
-                    <% months.forEach(month=> { %>
-                        <option value="<%= month %>">
-                            <%= month %>
-                        </option>
-                    <% }) %>
-                </select>
+        <% if(!months || !employees){ %>
+            <div style="display: flex; justify-content: center; font-size: 1.5rem">
+                <p>No entries found</p>
             </div>
-            <div class="entry radio-select" id="employee-filter">
-                <select id="employee">
-                    <% employees.forEach(employee=> { %>
-                        <option value="<%= employee %>">
-                            <%= employee %>
-                        </option>
-                    <% }) %>
-                </select>
+        <% } else { %>
+            <div>
+                <div class="entry radio-select" id="month-filter">
+                    <select id="month">
+                        <% months.forEach(month=> { %>
+                            <option value="<%= month %>">
+                                <%= month %>
+                            </option>
+                        <% }) %>
+                    </select>
+                </div>
+                <div class="entry radio-select" id="employee-filter">
+                    <select id="employee">
+                        <% employees.forEach(employee=> { %>
+                            <option value="<%= employee %>">
+                                <%= employee %>
+                            </option>
+                        <% }) %>
+                    </select>
+                </div>
             </div>
-        </div>
-        <div class="enrty radio-container">
-            <form class="radios" autocomplete="off">
-                <p>Search By:</p>
-                <input type="radio" name="filter" value="employee" checked/>
-                <p>Employee</p>
-                <input type="radio" name="filter" value="month"/>
-                <p>Month</p>
-            </form>
-            <button class="submit-button" id="filter-search-button">Search</button>
-        </div>
-        <div id="filter-search-result"></div>
+            <div class="enrty radio-container">
+                <form class="radios" autocomplete="off">
+                    <p>Search By:</p>
+                    <input type="radio" name="filter" value="employee" checked/>
+                    <p>Employee</p>
+                    <input type="radio" name="filter" value="month"/>
+                    <p>Month</p>
+                </form>
+                <button class="submit-button" id="filter-search-button">Search</button>
+            </div>
+            <div id="filter-search-result"></div>
+        <% } %>
     </div>
 </main>
 
